--- a/ct/package.json
+++ b/ct/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "jquery": "^3.5.1",
+    "local-storage": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
